--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,8 +39,23 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3"
+    "axios-mock-adapter": "^2.1.0",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^4.4.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    },
+    "testMatch": [
+      "<rootDir>/src/tests/**/*.test.tsx"
+    ]
   }
 }
