--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.3",
     "web-vitals": "^3.0.0"
   },
   "scripts": {
@@ -44,11 +46,15 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.20",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.7",
     "ts-jest": "^29.2.5",
-    "typescript": "^4.4.4"
+    "typescript": "^5.7.3"
   },
   "jest": {
     "moduleNameMapper": {
