--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,10 @@ services:
       # depends_on:
       #   - backend
       ports:
-        - "3000:3000"  # Expose port 3000 for React app
+        - "5173:5173"  # Expose port 5173 for React app
       volumes:
         - ./frontend:/app  # Ensure this path is correct
-        - /app/node_modules  # Prevent conflicts with local node_modules
+        # - /app/node_modules  # Prevent conflicts with local node_modules
       networks:
         - ride_share_network
 
