--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,28 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "esnext",
-    "jsx": "preserve",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "noEmit": true,
-    "typeRoots": ["./node_modules/@types"],
-    "types": ["react", "react-dom", "react-router-dom"]
-  },
-  "include": [
-    "src/**/*",
-    "src/tests/**/*"
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
